# ArchiveLens

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
engine/: README.md  pyproject.toml  requirements-lock.txt
engine/src/archivelens_engine/: __init__.py  __main__.py  build_info.py  config.py  demo.py  diagnostics.py  html_export.py  layout_context.py  ocr_core.py  ocr_engine.py  ocr_model.py  ocr_search.py  page_evidence.py  progress_dashboard.py  protocol.py  report_pipeline.py  server.py  (+3 more)
engine/tests/: test_ci_encoding.py  test_custom_search_ocr_fixtures.py  test_demo.py  test_diagnostics.py  test_document_backends.py  test_export_jobs.py  test_handlers.py  test_html_export.py  test_ipc_contract.py  test_layout_context.py  test_layout_context_handlers.py  test_license_compliance.py  test_migration_backup.py  test_no_pymupdf.py  test_occurrence_sequence.py  test_ocr_core.py  test_ocr_corpus.py  test_ocr_engine.py  test_ocr_search.py  test_page_evidence.py  test_progress_dashboard.py  test_protocol.py  test_rapidocr_concurrency.py  test_recovery_contract.py  test_recovery_handlers.py  test_release_gate.py  test_report_pipeline_html.py  test_report_pipeline_native_config.py  test_resume_pipeline.py  test_review_completeness.py  test_script_variants.py  test_search_handlers.py  test_search_term_migration.py  test_search_terms.py  test_server.py  test_server_shutdown.py  test_source_preflight.py  test_storage_cleanup.py  test_store.py  test_store_concurrency.py  (+6 more)
(+197 files in other folders)
